Standardize handler field handling
Fixes #32470
