# api/rest/mantisbt_openapi.yaml
@@ -2165,6 +2165,33 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Project'
+    ProjectCategory:
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        project:
+          $ref: '#/components/schemas/ProjectRef'
+        handler:
+          $ref: '#/components/schemas/UserRef'
+        enabled:
+          type: boolean
+    ProjectCategoryCollection:
+      type: object
+      required: [categories]
+      properties:
+        categories:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProjectCategory'
+    ProjectCategoryResponse:
+      type: object
+      required: [category]
+      properties:
+        category:
+          $ref: '#/components/schemas/ProjectCategory'
     ProjectResponse:
       type: object
       required: [project]
@@ -2516,8 +2543,8 @@ components:
       properties:
         name:
           type: string
-        assigned_to:
-          type: integer
+        handler:
+          $ref: '#/components/schemas/UserRef'
         enabled:
           type: boolean
     ProjectCategoriesUpdate:
@@ -2525,8 +2552,8 @@ components:
       properties:
         name:
           type: string
-        assigned_to:
-          type: integer
+        handler:
+          $ref: '#/components/schemas/UserRef'
         enabled:
           type: boolean
     ProjectSubprojectsAdd:
@@ -2812,6 +2839,8 @@ components:
               - $ref: '#/components/schemas/IssueNoteResponse'
               - $ref: '#/components/schemas/UserResponse'
               - $ref: '#/components/schemas/ProjectResponse'
+              - $ref: '#/components/schemas/ProjectCategoryResponse'
+              - $ref: '#/components/schemas/ProjectCategoryCollection'
               - $ref: '#/components/schemas/VersionResponse'
               - $ref: '#/components/schemas/TokenResponse'
               - $ref: '#/components/schemas/ConfigResponse'
@@ -2875,6 +2904,8 @@ components:
               - $ref: '#/components/schemas/UserResponse'
               - $ref: '#/components/schemas/ProjectCollection'
               - $ref: '#/components/schemas/ProjectResponse'
+              - $ref: '#/components/schemas/ProjectCategoryResponse'
+              - $ref: '#/components/schemas/ProjectCategoryCollection'
               - $ref: '#/components/schemas/VersionResponse'
               - $ref: '#/components/schemas/TokenResponse'
               - $ref: '#/components/schemas/ConfigResponse'
